# polyglot-project-template

./: .Renviron  .Rprofile  .gitignore  .renvignore  README.md  _quarto.yml  _toc.yml  air.toml  article.md  article.qmd  myst.yml  pyproject.toml
_extensions/lumo/: _extension.yml  style.css
_freeze/notebooks/celesta/execute-results/: html.json
_freeze/notebooks/exploristics/execute-results/: html.json
_freeze/notebooks/maryland/execute-results/: html.json
_freeze/site_libs/bootstrap/: bootstrap-4d5cdba1e59023d104418e560b599aaf.min.css
notebooks/: celesta.qmd
